<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Sử dụng ScrollView để bao bọc nội dung cuộn -->
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_container"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/txt_chitietdonhang"
                    android:textSize="24sp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/txt_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="price"
                    android:textColor="#E53935"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/txt_food_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="16dp"
                android:background="@android:color/white"
                android:textColor="@android:color/black"/>

            <!-- Thông tin đơn hàng -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/txt_hoten"
                android:textColor="#DD2C00"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/enter_fulname_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_fullname"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:text="Số Điện Thoại"
                android:textColor="#DD2C00"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/enter_sdt_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nhập số điện thoại"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColorHint="#546E7A"
                tools:ignore="VisualLintTextFieldSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:text="Địa Chỉ Giao Hàng"
                android:textColor="#DD2C00"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/enter_adress_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_giaohang"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#546E7A"
                tools:ignore="VisualLintTextFieldSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:text="Phương Thức Thanh Toán"
                android:textColor="#DD2C00"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spiner_payment_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp" />

        </LinearLayout>
    </ScrollView>

    <!-- Phần nút cố định ở dưới cùng -->
    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp">

        <Button
            android:id="@+id/btn_cancel_order"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hủy" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginStart="30dp"
            android:id="@+id/btn_submit_order"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Đặt Hàng" />
    </LinearLayout>

</RelativeLayout>
